--- a/Phase 1/README
+++ b/Phase 1/README
@@ -1,5 +1,5 @@
 ================================================
-Functional Simulator for subset of ARM Processor
+Functional Simulator for subset of RISC-V Processor
 ================================================
 
 README
@@ -13,25 +13,26 @@ Table of contents
 
 Directory Structure:
 --------------------
-CS112-Project
+CS204-Project
   |
   |- bin
       |
-      |- myARMSim
+      |- myRISCVSim
   |- doc
       |
       |- design-doc.docx
   |- include
       |
-      |- myARMSim.h
+      |- myRISCVSim.h
   |- src
       |- main.c
       |- Makefile
-      |- myARMSim.h
+      |- myRISCVSim.h
   |- test
       |- simple_add.mem
       |- fib.mem
       |- array_add.mem
+      |- bubble_sort.mem
 
 How to build
 ------------
@@ -46,5 +47,5 @@ For cleaning the project:
 
 How to execute
 --------------
-./myARMSim test/simple_add.mem
+./myRISCVSim ../test/simple_add.mem
 
