--- a/Phase3/test.ipynb
+++ b/Phase3/test.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys\n",
+    "import ctypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -48,20 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = np.full((1,3), -1, dtype='int16')\n",
-    "# for i in a:\n",
-    "#     print(i[0])\n",
-    "# # print(a)\n",
-    "# print(a[0][2])"
+    "blocks = np.zeros((1,4,2), dtype='uint8')\n",
+    "# blocks[0][0] = -5\n",
+    "blocks[0][0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -79,10 +90,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "312\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [0]*32\n",
+    "# a = [567]\n",
+    "s = sys.getsizeof(a)\n",
+    "print(s)\n",
+    "a = bytearray(a)\n",
+    "s = sys.getsizeof(a)\n",
+    "ctypes.sizeof(ctypes.c_int)\n",
+    "# print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'sys' has no attribute 'to_bytes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a \u001b[39m=\u001b[39m sys\u001b[39m.\u001b[39;49mto_bytes(\u001b[39m1024\u001b[39m,\u001b[39m4\u001b[39m, byteorder\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbig\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'sys' has no attribute 'to_bytes'"
+     ]
+    }
+   ],
+   "source": [
+    "a = sys.to_bytes(1024,4, byteorder='big')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opcode_mask = 0b1010101\n",
+    "opcode = 456 & opcode_mask\n",
+    "opcode == 0x40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'00000000000000000000000000101101'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "address = bin(45)[2:].zfill(32)\n",
+    "address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,  17, 215], dtype=uint8)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = np.zeros((1,4,32), dtype='uint8')\n",
+    "a = 4567\n",
+    "dataInBinary = bin(a)[2:].zfill(256)\n",
+    "for i in range(32):\n",
+    "    d[0][0][i] = int(dataInBinary[i*8:i*8+8],2)\n",
+    "\n",
+    "d[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4567"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int('0001000111010111',2)"
+   ]
   }
  ],
  "metadata": {
