data cache changes

--- a/Phase3/test.ipynb
+++ b/Phase3/test.ipynb
@@ -31,6 +31,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0], dtype=uint8)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.zeros((2**32), dtype='uint8')\n",
+    "sys.getsizeof(a)\n",
+    "b = a[0:8]\n",
+    "b\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -50,42 +73,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array([[0, 0, 0],\n",
+       "       [0, 0, 0],\n",
+       "       [0, 0, 0],\n",
+       "       [0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "blocks = np.zeros((1,4,2), dtype='uint8')\n",
-    "# blocks[0][0] = -5\n",
-    "blocks[0][0][0]"
+    "\n",
+    "# LRU policy\n",
+    "LRU = np.zeros((4, 3), dtype='uint8')\n",
+    "LRU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{} {} {} {} {} {} {}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.full((7,), {}, dtype=object)\n",
-    "print(a)"
+    "a = [1,2,3,4,6,6,64546,664,3]\n",
+    "b = a.pop(-1)\n",
+    "b"
    ]
   },
   {
