major changes for write and read done

--- a/Phase3/test.ipynb
+++ b/Phase3/test.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sys\n",
-    "import ctypes"
+    "import ctypes\n",
+    "import random"
    ]
   },
   {
@@ -138,6 +139,27 @@
    "source": [
     "a=int('00001100000011010001001000001111',2)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wayNum = random.randint(0, 4)\n",
+    "wayNum"
    ]
   },
   {
